fix: ensure contrast text for accessibility

--- a/src/components/styles/layout-override.css
+++ b/src/components/styles/layout-override.css
@@ -83,7 +83,7 @@ ul#nav li:active {
 }
 
 ul#nav li.current a {
-  color: rgb(189, 91, 26);
+  color: rgb(129, 63, 14);
 }
 
 .sidebar {
